   * #2647387 - "Add descriptions to Memory Editor's buttons"
   * #2647418 - "Add ctrl+A and ctrl+C to threads, token, modules etc"
   * #2647422 - "Suggest filename in Memory Editor->Data->Save"
   * #2647435 - "Add descriptions to Memory search results window"
   * Modules tab shows mapped files
   * "Reduce Working Set" function
   * Customizable columns for the process list/tree
   * All lists now have Ctrl+A and Ctrl+C support
   * Vista-style lists
   * Changing service settings under a limited account now prompts for 
     elevation instead of giving an Access Denied error
   * Shows environment variables
 * FIXED:
   * #2602541 - "Bug with 'Hide When Minimized' enabled -svn635"
   * Replace Task Manager works correctly when Start hidden is enabled
   * csc.exe launching
   * Black border bug when restoring from minimized state
   * Nulls at the ends of handle names
   * Errors when changing service settings
   * Slow closing of various windows

1.3.5.0
 * NEW:
   * #2596502 - "Add access keys"
   * #2596509 - "Double click on mutant-->Open properties window"
   * #2596512 - "General tab window goes in the background"
   * #2600995 - "Improvements to Help file"
   * #2602538 - "Move some options to new window"
   * #2602553 - "Add access key for Help"
   * #2602606 - "Display a warning when running on 64bit WIN"
   * #2605000 - "Add descriptions to some buttons"
   * #2605133 - "Add access key to Log"
   * #2605140 - "Save Log-->Suggest Log.txt"
   * #2605146 - "When you open Log, the entries shouldn't be selected"
   * #2605148 - "CSR Processes: Add select all and/or ctrl+A"
   * #2605158 - "Log: Add Copy to clipboard and ctrl+A"
   * #2605167 - "Add "Hide When Closed" option"
   * #2608710 - "Notifications menu improvements"
   * #2608801 - "Add Shutdown options"
   * #2609039 - "Use thousands separator"
   * #2613838 - "Add process' icon before process' name in process' window"
   * #2615707 - "Improvements to Log"