@@ -11,6 +11,7 @@ Process Hacker
    * #2647435 - "Add descriptions to Memory search results window"
    * Modules tab shows mapped files
    * "Reduce Working Set" function
+   * Can change virtualization for processes
    * Customizable columns for the process list/tree
    * All lists now have Ctrl+A and Ctrl+C support
    * Vista-style lists
